refactor: pagerank returns CodeUnit